--- a/Parte1/index.html
+++ b/Parte1/index.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tribute to : </title>
+    <link rel="stylesheet" href="/css/style.css">
+    <title>Tribute to : Michael Jackson</title>
 </head>
+
 <body>
-    
+    <h1>Tribute to Michael Jackson</h1>
+    <img src="/img/michaeljackson.jpg" alt="Michael">
+    <h3>“To give someone a piece of your heart, is worth more than all the wealth in the world.”</h3>
+    <h2>Timeline</h2>
+    <ul>
+        <li>
+            <b>August 29, 1958. </b> Michael Joseph Jackson was born in Gary, Indiana. He was the eighth of ten children in the Jackson family, a working-class African-American family living in a two-bedroom house on Jackson Street.
+        </li>
+        <li> <b>1964.</b>Jackson made his professional debut in with his elder brothers Jackie, Tito, Jermaine, and Marlon as a member of the Jackson 5.</li>
+        <li> <b>1979.</b>He became a solo star with his album "Off the Wall" </li>
+        <li> <b>1982.</b> Jackson's sixth album, Thriller, was released. It was the best-selling album worldwide in 1983, and became the best-selling album of all time in the US and the best-selling album of all time worldwide, selling an estimated 70 million
+            copies. </li>
+    </ul>
+
+    <footer>
+        <p>More info about the King of Pop <a href="https://en.wikipedia.org/wiki/Michael_Jackson">here.</a></p>
+    </footer>
 </body>
+
 </html>
