--- a/Parte1/index.html
+++ b/Parte1/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <h1>Tribute to Michael Jackson</h1>
-    <img src="/img/michaeljackson.jpg" alt="Michael">
+    <img src="michaeljackson.jpg" alt="Michael">
     <h3>“To give someone a piece of your heart, is worth more than all the wealth in the world.”</h3>
     <h2>Timeline</h2>
     <ul>
