--- a/Parte3/3.html
+++ b/Parte3/3.html
@@ -1,117 +1,137 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
 
 
 
-<script>
-
-let nombres  = ['Jorge','Isabel','Juan','Pedro','Karina','Jose','Arturo','Rogelio','Bertha'];
-
-
-/*
-
-Funciones 1 -  Crea una funcion llamada "mayusculas" que:
-- reciba como argumento el arreglo "nombres" y convierta todos los nombres a mayusula.
-- Los debe escribir en la consola convertidos.
-*/
-
-// CREA TU FUNCION MAYUSCULAS aqui:
+    <script>
+        let nombres = ['Jorge', 'Isabel', 'Juan', 'Pedro', 'Karina', 'Jose', 'Arturo', 'Rogelio', 'Bertha'];
 
 
+        /*
+
+        Funciones 1 -  Crea una funcion llamada "mayusculas" que:
+        - reciba como argumento el arreglo "nombres" y convierta todos los nombres a mayusula.
+        - Los debe escribir en la consola convertidos.
+        */
+
+        // CREA TU FUNCION MAYUSCULAS aqui:
+        function mayusculas(arr) {
+            for (var i = 0; i < arr.length; i++) {
+                arr[i] = arr[i].toUpperCase();
+            }
+            console.log(arr);
+        }
 
 
-/*
-Funciones 2 -  Crea una funcion llamada "calculateDogAge" que: 
+        /*
+        Funciones 2 -  Crea una funcion llamada "calculateDogAge" que: 
 
-- reciba como argumento le edad del perro.
-- realice el cálculo de la edad en base a la conversión 1 año humano = 7 años perro.  
-- Deberá escribir en consola "Tu perro tiene NN años perro"
-- EJ:   calculateDogAge(2)  -> "Tu pero tiene 14 años perro"
+        - reciba como argumento le edad del perro.
+        - realice el cálculo de la edad en base a la conversión 1 año humano = 7 años perro.  
+        - Deberá escribir en consola "Tu perro tiene NN años perro"
+        - EJ:   calculateDogAge(2)  -> "Tu pero tiene 14 años perro"
 
-*/
+        */
 
-// CREA TU FUNCION calculateDogAge aqui:
-
-
-
-
-
-/*
-
-### Funciones 3 - Crea 2 funciones. Una llamada celsiusToFahrenheit que:
-
-- reciba un número y lo convierta de celsius a Fahrenheit , posteriormente que escriba el resultado en consola.
-
-y otra llamada fahrenheitToCelsius que:
-
-- reciba un número y lo convierta de Fahrenheit a Celsius ,  posteriormente que escriba el resultado en consola.
-
-La conversion deberá ser un numero entero para ambas (sin decimales)
-
-EJ:  
-
-
-celsiusToFahrenheit(35)  --> 95
-
-fahrenheitToCelsius(95) --> 35
-
-*/
+        // CREA TU FUNCION calculateDogAge aqui:
+        function calculateDogAge(age) {
+            console.log(`Tu perro tiene ${age * 7} años perro`);
+        }
 
 
 
 
-// CREA TUS FUNCIONES  aqui:
+        /*
+
+        ### Funciones 3 - Crea 2 funciones. Una llamada celsiusToFahrenheit que:
+
+        - reciba un número y lo convierta de celsius a Fahrenheit , posteriormente que escriba el resultado en consola.
+
+        y otra llamada fahrenheitToCelsius que:
+
+        - reciba un número y lo convierta de Fahrenheit a Celsius ,  posteriormente que escriba el resultado en consola.
+
+        La conversion deberá ser un numero entero para ambas (sin decimales)
+
+        EJ:  
+
+
+        celsiusToFahrenheit(35)  --> 95
+
+        fahrenheitToCelsius(95) --> 35
+
+        */
 
 
 
 
+        // CREA TUS FUNCIONES  aqui:
+        function celsiusToFahrenheit(celsius) {
+            console.log((celsius * 9 / 5) + 32);
+        }
 
-
-/*  OBJETOS 
-
-A) Define un objeto tipo "Perro" que reciba 3 parametros
-
-1) Nombre
-2) Color
-3) Raza
-
-
-B) Crea 3 objectos  con diferentes valores.
-
-C) Con un console.log escribe el nombre del primer objeto, el color del segundo, y la raza del tercero. Lo puedes hacer en una sola línea o en 3 lineas aparte. 
-
-
-*/
-
-
-
-/***
- * 
- *        PRUEBA TUS FUNCIONES
- * 
- ***/
-
-
-mayusculas(nombres);
-calculateDogAge(4);
-celsiusToFahrenheit(35)
-fahrenheitToCelsius(95)
+        function fahrenheitToCelsius(fah) {
+            console.log((fah - 32) * 5 / 9);
+        }
 
 
 
 
 
-/***
- * 
- *        PRUEBA TUS OBJETOS AQUI
- * 
- ***/
+        /*  OBJETOS 
+
+        A) Define un objeto tipo "Perro" que reciba 3 parametros
+
+        1) Nombre
+        2) Color
+        3) Raza
 
 
-</script>
+        B) Crea 3 objectos  con diferentes valores.
+
+        C) Con un console.log escribe el nombre del primer objeto, el color del segundo, y la raza del tercero. Lo puedes hacer en una sola línea o en 3 lineas aparte. 
+
+
+        */
+        function perro(nombre, color, raza) {
+            this.nombre = nombre;
+            this.color = color;
+            this.raza = raza;
+        }
+
+
+        /***
+         * 
+         *        PRUEBA TUS FUNCIONES
+         * 
+         ***/
+
+
+        mayusculas(nombres);
+        calculateDogAge(4);
+        celsiusToFahrenheit(35)
+        fahrenheitToCelsius(95)
+
+
+        /***
+         * 
+         *        PRUEBA TUS OBJETOS AQUI
+         * 
+         * 
+         * 
+         ***/
+        var perro1 = new perro("Nasus", "Marrón", "Chihuahua");
+        var perro2 = new perro("Pizza", "Negro", "Pug");
+        var perro3 = new perro("Scooby", "Marrón", "Gran Danés");
+
+        console.log(perro1.nombre);
+        console.log(perro2.color);
+        console.log(perro3.raza);
+    </script>
 
 </head>
 
